--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "haskell-hoogle",
   "main": "./lib/haskell-hoogle",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "Lookup function documentation on hoogle.",
   "keywords": ["hoogle", "haskell", "documentation"],
   "activationCommands": {
     "atom-workspace": "haskell-hoogle:lookup"
   },
-  "repository": "https://github.com/atom/haskell-hoogle",
+  "repository": "https://github.com/kaeluka/atom-haskell-hoogle",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
